<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tnombre"
                    android:textSize="25dp"
                    android:layout_margin="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tapellido"
                    android:layout_marginLeft="10dp"
                    android:textSize="25dp"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tidentificacion"
                    android:textSize="25dp"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <EditText
                    android:id="@+id/Enombre"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    />
                <EditText
                    android:id="@+id/Eapellido"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    />
                <EditText
                    android:id="@+id/Eidentificacion"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:inputType="number"
                    />
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Género:"
            android:textColor="@color/green"
            android:textSize="20dp"
            android:layout_margin="20dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/Iradiogroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">
                <RadioButton
                    android:id="@+id/Ifemenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femenino"
                    android:checked="true"
                    android:textSize="20dp"/>
                <RadioButton
                    android:id="@+id/Imasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino"
                    android:textSize="20dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    >
                    <ImageButton
                        android:id="@+id/imageButton1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignBottom="@+id/editText"
                        android:layout_toRightOf="@+id/editText"
                        android:contentDescription="@string/selectdate"
                        android:cropToPadding="true"
                        android:src="@drawable/calendario"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <EditText
                            android:id="@+id/EfechaN"
                            android:hint="Fecha de nacimiento"
                            android:layout_width="wrap_content"
                            android:layout_marginTop="25dp"
                            android:layout_marginLeft="5dp"
                            android:layout_height="wrap_content"
                            android:editable="false" >
                        </EditText>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="(Oprima el icono calendario)"
                            android:textColor="@color/red"/>
                    </LinearLayout>




                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:layout_marginTop="10dp"
                    android:text="Ciudad de nacimiento:"
                    android:textSize="20dp"/>
                <Spinner
                    android:id="@+id/spciudad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RadioGroup>

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_marginLeft="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Elija sus hobbies"
                android:textColor="@color/green"
                android:textSize="20dp"/>

            <CheckBox
                android:id="@+id/musica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Escuchar música"
                android:onClick="check1"/>

            <CheckBox
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="jugar play"
                android:onClick="check2"
                />
            <CheckBox
                android:id="@+id/dormir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dormir"
                android:onClick="check3"

                />

            <CheckBox
                android:id="@+id/tareas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hacer tareas de moviles"
                android:onClick="check4"/>

            <Button
                android:id="@+id/enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enviar"
                android:onClick="envia"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/Imuestra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:visibility="invisible"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Datos ingresados:"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nombre: "/>
                <TextView
                    android:id="@+id/Inombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Apellido: "/>
                <TextView
                    android:id="@+id/Iapellido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Identificación: "/>
                <TextView
                    android:id="@+id/Iidentificacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Género: "/>
                <TextView
                    android:id="@+id/Igenero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="fecha nacimiento: "/>
                <TextView
                    android:id="@+id/Ifecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ciudad de nacimiento: "/>
                <TextView
                    android:id="@+id/Iciudad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hobbies: "/>
                <TextView
                    android:id="@+id/Ihobbies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</ScrollView>
